--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -7,7 +7,8 @@ filter:
         - 'tests/*'
 build:
     environment:
-        php: '5.6'
+        php:
+            version: '8.0'
     tests:
         override:
             -
